--- a/config.yml
+++ b/config.yml
@@ -214,7 +214,7 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: https://static.desica.uk/hotlink-ok/Logo-Prod-Transparent-Purple%40Small.png
+  logo: https://static.desica.uk/hotlink-ok/Logo-White%40Transparent.png
 
   # This is the description that is shown
   # on the footer and meta tags.
