--- a/config.yml
+++ b/config.yml
@@ -121,12 +121,7 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: North Coast
-      description: The main servers are located here.
-      closed: true
-    - name: East Coast      
-    - name: Uncategorized
-      untitled: true
+
 
   # These are your systems. Change them to
   # change the amount of components.
@@ -134,16 +129,16 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
-    - name: Gateway
-      category: North Coast
-    - name: Backup Gateway
-      category: East Coast
-    - name: API
-      description: The guts of the application.
-      category: Uncategorized
-    - name: Media Proxy
-      description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
-      category: Uncategorized
+    - name: Website
+      description: Our website at desica.uk
+    - name: CDN
+      description: Static assets storage used by all applications.
+    - name: Desikit
+      description: The Desica design system
+    - name: Desiads site
+      description: The Desica ads network site.
+    - name: Desiads API
+      description: The Desica ads network API.
 
   # What date format to use?
   #
