--- a/config.yml
+++ b/config.yml
@@ -121,7 +121,7 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: Uncategorized
+    - name: All services
       untitled: true
 
 
