--- a/config.yml
+++ b/config.yml
@@ -264,10 +264,10 @@ params:
   # down: "#e60000"
   # notice: "#24478f"
   brand: "#a239c5"
-  ok: "#008000"
-  disrupted: "#cc4400"
-  down: "#e60000"
-  notice: "#24478f"
+  ok: "#50E3C2"
+  disrupted: "#f5a623"
+  down: "#FF0000"
+  notice: "#0070F3"
 
   # If the status page shows that
   # there are disruptions or outages
